NeDBに保存、検索API追加
